--- a/src/app/inventory/inventory.component.html
+++ b/src/app/inventory/inventory.component.html
@@ -1,3 +1,18 @@
-<p>
-  inventory works!
-</p>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-6 col-md-6 col-sm-6">
+    <h1> Inventory List </h1>
+    <ul *ngFor= "let inventory of inventory">
+      <li>{{inventory.id}}</li>
+      <li>{{inventory.name}}</li>
+      <li>{{inventory.make}}</li>
+    </ul>
+    </div>
+
+  <div class="col-lg-6 col-md-6 col-sm-6">  
+    <h1> Pictures </h1>
+    </div>
+  </div>
+</div>
+
+
