--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,6 @@
-<p>
-  home works!
-</p>
+<div class="jumbotron">
+  <h1 class="display-3">Welcome to my e-commerce site.</h1>
+  <p class="lead"> It uses angular2 and bootstrap for the front-end.</p>
+  <hr class="my-4">
+</div>
+
