--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -10,7 +10,7 @@
         <a class="nav-link" routerLink = "inventory">Inventory</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink ="buy">How to Buy</a>
+        <a class="nav-link" routerLink ="buy">How to buy</a>
       </li>
         <li class="nav-item">
         <a class="nav-link" routerLink = "faq" >FAQ</a>
