Added contact, and login

--- a/src/app/buy/buy.component.html
+++ b/src/app/buy/buy.component.html
@@ -1,3 +1,24 @@
-<p>
-  buy works!
-</p>
+<div class="container">
+  <div id="row">
+        <div class="col-lg-12 col-md-12 col-sm-12">
+        <h1> How to buy our products </h1>
+        <h2> Purchasing our products is a straight forward process! Please follow the easy below. </h2>
+        <p> 1) Create an account with us and complete your profile. </p>
+        <p> 2) Select a product from our inventory. </p>
+        <p> 3) Add the product to your cart and wait for confirmation from us </p>
+        <p> 4) We will contact to let you know if your order is approved, or if there are any problems by email or call from our staff </p>
+        <p> 5) Transer the cost of the product to our bank account in accordance to the invoice we have issued </p>
+        <p> 6) After the payment is confirmed, we will contact you once again by email or call. </p>
+        <p> 7) The product will arrive to the shipping address you provided in 1-2 weeks </p>
+        <p> <strong> If you require any assistance in regards with the above procedures, please contact us. </strong> </p>
+  
+  
+  </div>
+</div>
+</div>
+
+
+
+
+
+
