--- a/src/app/company-info/company-info.component.html
+++ b/src/app/company-info/company-info.component.html
@@ -1,3 +1,27 @@
-<p>
-  company-info works!
-</p>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-12 col-md-12 col-sm-12">
+      <h1> About us </h1>
+      <p> Always remember in the jungle there’s a lot of they in there, after you overcome they, you will make it to paradise.
+        We don’t see them, we will never see them. We the best. I told you all this before, when you have a swimming pool,
+        do not use chlorine, use salt water, the healing, salt water is the healing. Surround yourself with angels, positive
+        energy, beautiful people, beautiful souls, clean heart, angel. I’m up to something. A major key, never panic. Don’t
+        panic, when it gets crazy and rough, don’t panic, stay calm. Find peace, life is like a water fall, you’ve gotta
+        flow. They never said winning was easy. Some people can’t handle success, I can. Life is what you make it, so let’s
+        make it. The weather is amazing, walk with me through the pathway of more success. Take this journey with me, Lion!
+        Egg whites, turkey sausage, wheat toast, water. Of course they don’t want us to eat our breakfast, so we are going
+        to enjoy our breakfast. The other day the grass was brown, now it’s green because I ain’t give up. Never surrender.
+        They don’t want us to eat. Let’s see what Chef Dee got that they don’t want us to eat. Surround yourself with angels.
+        The first of the month is coming, we have to get money, we have no choice. It cost money to eat and they don’t want
+        you to eat. Lion! The first of the month is coming, we have to get money, we have no choice. It cost money to eat
+        and they don’t want you to eat. The key is to enjoy life, because they don’t want you to enjoy life. I promise you,
+        they don’t want you to jetski, they don’t want you to smile. Always remember in the jungle there’s a lot of they
+        in there, after you overcome they, you will make it to paradise. They never said winning was easy. Some people can’t
+        handle success, I can. How’s business? Boomin. Watch your back, but more importantly when you get out the shower,
+        dry your back, it’s a cold world out there. Don’t ever play yourself. Another one. Let’s see what Chef Dee got that
+        they don’t want us to eat. You do know, you do know that they don’t want you to have lunch. I’m keeping it real with
+        you, so what you going do is have lunch. </p>
+
+    </div>
+  </div>
+</div>
